# Leo-the-wizard-cat

./: .gitignore  ABOUT.txt  CMakeLists.txt  Doxyfile  README.md  doxygen.txt
assets/: cat_sky_swamp.map  hurt.frag  rock_shield.frag  sky.map  world.map
assets/maps/: cat_sky_swamp.map  cat_world.map
docs/html/: AnimationComponent_8h.html  AnimationComponent_8h__dep__incl.map  AnimationComponent_8h__dep__incl.md5  AnimationComponent_8h__incl.map  AnimationComponent_8h__incl.md5  AnimationComponent_8h_source.html  AnimationSystem_8h.html  AnimationSystem_8h__dep__incl.map  AnimationSystem_8h__dep__incl.md5  AnimationSystem_8h__incl.map  AnimationSystem_8h__incl.md5  AnimationSystem_8h_source.html  CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CameraComponent_8h.html  CameraComponent_8h__dep__incl.map  CameraComponent_8h__dep__incl.md5  CameraComponent_8h__incl.map  CameraComponent_8h__incl.md5  CameraComponent_8h_source.html  CameraSystem_8h.html  CameraSystem_8h__dep__incl.map  CameraSystem_8h__dep__incl.md5  CameraSystem_8h__incl.map  CameraSystem_8h__incl.md5  CameraSystem_8h_source.html  CheckpointComponent_8h.html  CheckpointComponent_8h__dep__incl.map  CheckpointComponent_8h__dep__incl.md5  CheckpointComponent_8h__incl.map  CheckpointComponent_8h__incl.md5  CheckpointComponent_8h_source.html  CheckpointSystem_8h.html  CheckpointSystem_8h__dep__incl.map  CheckpointSystem_8h__dep__incl.md5  CheckpointSystem_8h__incl.map  CheckpointSystem_8h__incl.md5  CheckpointSystem_8h_source.html  CollisionComponent_8h.html  (+594 more)
docs/html/search/: all_0.js  (+102 more)
engine/: AnimationComponent.h  AnimationSystem.cpp  AnimationSystem.h  CMakeCache.txt  CMakeLists.txt  CameraComponent.h  CameraSystem.h  CheckpointComponent.h  CheckpointSystem.h  CollisionComponent.h  CollisionSystem.h  CollisionUpdateSystem.h  ComponentStorage.h  ECSEngine.h  EnemyComponent.h  EnemySystem.h  Entity.cpp  Entity.h  EntityManager.h  GameplayScene.h  GravitySystem.h  HpComponent.h  HpSystem.h  InputComponent.h  InputSystem.h  LocationComponent.h  MainMenuScene.h  Makefile  MathUtil.h  MovementSystem.h  PauseScene.h  ProcessEventsSystem.h  ProjectileComponent.h  ProjectileSystem.h  Scene.h  ScoreComponent.h  ScoreSystem.h  ShaderManager.cpp  ShaderManager.h  SoundManager.cpp  (+16 more)
engine/engine/: Makefile  cmake_install.cmake  ecsp1
